[metadata]
name = migi
version = 0.0.12
author = Vintage Mars
author_email = nomadsinteractive@gmail.com
description = A powerful and versatile dynamic instrumentation toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nomadsinteractive/migi
project_urls =
    Bug Tracker = https://github.com/nomadsinteractive/migi/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows
include_package_data = True

[options]
package_dir =
    = src/python_package
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src/python_package
